# pk_kinect

./: .gitignore  CMakeLists.txt
lib/inc/: pk_kinect.h
lib/src/: pk_kinect.cpp.cpp
sample/: imshow.cpp
